--- a/index.html
+++ b/index.html
@@ -10,33 +10,8 @@
 </head>
 
 <body>
-<!--<div style="text-align:center; margin: 300px; font-size: 100px">No More Service</div>-->
-      <img id="fit" src="Blackboard.png" alt="Course" usemap="#workmap" width="1511" height="968">
-      <map name="workmap">
-            <area shape="rect" coords="25,220,370,465" alt="Advanced Probability and Statistics"
-                  title="Advanced Probability and Statistics" href="maths/units.html">
-            <area shape="rect" coords="400,220,740,465" alt="Aptitude" title="Aptitude" href="aptitude/units.html">
-            <area shape="rect" coords="770,220,1115,465" alt="Computer Organization and Architecture"
-                  title="Computer Organization and Architecture" href="coa/units.html">
-            <area shape="rect" coords="1145,220,1490,465" alt="Creativity and Critical Thinking"
-                  title="Creativity and Critical Thinking" href="cact/units.html">
-            <area shape="rect" coords="25,485,370,705" alt="Design and Analysis of Algorithms"
-                  title="Design and Analysis of Algorithms" href="daa/units.html">
-            <area shape="rect" coords="400,485,740,705" alt="Design and Analysis of Algorithms Lab"
-                  title="Design and Analysis of Algorithms Lab" href="daalab/units.html">
-            <area shape="rect" coords="770,485,1115,705" alt="Introduction to Data Science"
-                  title="Introduction to Data Science" href="ds/units.html">
-            <area shape="rect" coords="1145,485,1490,705" alt="Life Skills and Mentoring-4"
-                  title="Life Skills and Mentoring-4" href="lsm/units.html">
-            <area shape="rect" coords="25,725,370,945" alt="Machine Learning" title="Machine Learning"
-                  href="ml/units.html">
-            <area shape="rect" coords="400,725,740,945" alt="Machine Learning Lab" title="Machine Learning Lab"
-                  href="mllab/units.html">
-            <area shape="rect" coords="770,725,1115,945" alt="Minor Project" title="Minor Project"
-                  href="minorp/units.html">
-            <area shape="rect" coords="1145,725,1490,945" alt="Project Based Learning in Java Lab"
-                  title="Project Based Learning in Java Lab" href="pbljavalab/units.html">
-      </map>
+    <div style="text-align:center; margin: 260px; font-size: 100px">No Further Services Will Be Provided Now</div>
+    <div style="text-align:center; margin: 260px; font-size: 100px">Thankyou For Being With Us</div>
 </body>
 
 </html>
